--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,13 @@
 		</dependency>
 
 		<dependency>
+			<groupId>uk.ac.cam.cl.dtg.web</groupId>
+			<artifactId>resteasy-cors</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+
+
+		<dependency>
 			<groupId>uk.ac.cam.cl.dtg.teaching</groupId>
 			<artifactId>programming-test-java</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
