--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,18 @@
 			<version>3.5.1.201410131835-r</version>
 		</dependency>
 		
+		<dependency>
+    		<groupId>com.wordnik</groupId>
+    		<artifactId>swagger-jaxrs_2.11</artifactId>
+    		<version>1.3.12</version>
+		    <exclusions>
+		    	<exclusion>
+    				<artifactId>jsr311-api</artifactId>
+		    		<groupId>javax.ws.rs</groupId>
+		    	</exclusion>
+    		</exclusions>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
