--- a/pom.xml
+++ b/pom.xml
@@ -16,15 +16,28 @@
 	<dependencies>
 
 		<dependency>
-			<groupId>org.mongodb</groupId>
-			<artifactId>mongo-java-driver</artifactId>
-			<version>2.12.4</version>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.4-1201-jdbc41</version>
 		</dependency>
 
 		<dependency>
-			<groupId>org.mongojack</groupId>
-			<artifactId>mongojack</artifactId>
-			<version>2.1.0</version>
+    		<groupId>commons-dbutils</groupId>
+    		<artifactId>commons-dbutils</artifactId>
+		    <version>1.6</version>
+		</dependency>
+
+		<dependency>
+		  <groupId>com.google.auto.value</groupId>
+		  <artifactId>auto-value</artifactId>
+		  <version>1.1</version>
+		  <scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.mchange</groupId>
+			<artifactId>c3p0</artifactId>
+			<version>0.9.5</version>
 		</dependency>
 
 		<dependency>
