--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,6 +2,33 @@
 <web-app xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	version="3.0">
+  
+        <context-param>
+                <param-name>resteasy.role.based.security</param-name>
+                <param-value>true</param-value>
+        </context-param>
+
+        <login-config>
+                <auth-method>DIGEST</auth-method>
+                <realm-name>MyFileRealm</realm-name>
+        </login-config>
+ 
+        <security-constraint>
+                <web-resource-collection>
+                        <web-resource-name>Git</web-resource-name>
+                        <url-pattern>/git/*</url-pattern>
+                </web-resource-collection>
+                <auth-constraint>
+                        <role-name>admin</role-name>
+                </auth-constraint>
+        </security-constraint>
+        
+   <security-role>
+      <role-name>admin</role-name>
+   </security-role>
+   <security-role>
+      <role-name>user</role-name>
+   </security-role>
  
 	
 </web-app>
