--- a/pom.xml
+++ b/pom.xml
@@ -1,239 +1,240 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>uk.ac.cam.cl.dtg.teaching</groupId>
-  <artifactId>pottery-backend</artifactId>
-  <packaging>war</packaging>
-  <version>1.0.0-SNAPSHOT</version>
-  <name>programming-test</name>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>uk.ac.cam.cl.dtg.teaching</groupId>
+	<artifactId>pottery-backend</artifactId>
+	<packaging>war</packaging>
+	<version>1.0.0-SNAPSHOT</version>
+	<name>programming-test</name>
 
-  <properties>
-    <resteasy.version>3.0.8.Final</resteasy.version>
-    <log4j.version>1.2.17</log4j.version>
-    <slf4j.version>1.7.5</slf4j.version>
-  </properties>
+	<properties>
+		<resteasy.version>3.0.8.Final</resteasy.version>
+		<log4j.version>1.2.17</log4j.version>
+		<slf4j.version>1.7.5</slf4j.version>
+	</properties>
 
-  <dependencies>
+	<dependencies>
 
-	<!--  Java Pojos for json interface with the code running in containers, Apache license -->
-	<dependency>
-		<groupId>uk.ac.cam.cl.dtg.teaching</groupId>
-		<artifactId>pottery-container-interface</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
-	</dependency>
+		<!-- Java Pojos for json interface with the code running in containers, 
+			Apache license -->
+		<dependency>
+			<groupId>uk.ac.cam.cl.dtg.teaching</groupId>
+			<artifactId>pottery-container-interface</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
 
 
-    <!-- Postgresql JDBC driver, BSD licence https://jdbc.postgresql.org/about/license.html -->
-    <dependency>
-      <groupId>org.postgresql</groupId>
-      <artifactId>postgresql</artifactId>
-      <version>9.4-1201-jdbc41</version>
-    </dependency>
-    
-    <!-- Apache Commons Dbutils, Apache license http://www.apache.org/licenses/LICENSE-2.0 -->
-    <dependency>
-      <groupId>commons-dbutils</groupId>
-      <artifactId>commons-dbutils</artifactId>
-      <version>1.6</version>
-    </dependency>
-    
+		<!-- Postgresql JDBC driver, BSD licence https://jdbc.postgresql.org/about/license.html -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.4-1201-jdbc41</version>
+		</dependency>
 
-    <!-- c3p0 connection pool, Eclipse public license http://www.eclipse.org/legal/epl-v10.html -->
-    <dependency>
-      <groupId>com.mchange</groupId>
-      <artifactId>c3p0</artifactId>
-      <version>0.9.5</version>
-    </dependency>
+		<!-- Apache Commons Dbutils, Apache license http://www.apache.org/licenses/LICENSE-2.0 -->
+		<dependency>
+			<groupId>commons-dbutils</groupId>
+			<artifactId>commons-dbutils</artifactId>
+			<version>1.6</version>
+		</dependency>
 
-    <!-- Apache Commons IO, Apache license http://www.apache.org/licenses/LICENSE-2.0 -->
-    <dependency>
-      <groupId>commons-io</groupId>
-      <artifactId>commons-io</artifactId>
-      <version>2.4</version>
-    </dependency>
 
-    <!-- Resteasy exception chains, Apache license http://www.apache.org/licenses/LICENSE-2.0 -->
-    <dependency>
-      <groupId>uk.ac.cam.cl.dtg.web</groupId>
-      <artifactId>resteasy-exception-chains</artifactId>
-      <version>1.0.6-SNAPSHOT</version>
-    </dependency>
+		<!-- c3p0 connection pool, Eclipse public license http://www.eclipse.org/legal/epl-v10.html -->
+		<dependency>
+			<groupId>com.mchange</groupId>
+			<artifactId>c3p0</artifactId>
+			<version>0.9.5</version>
+		</dependency>
 
-    <!-- Resteasy framework, Apache license http://www.apache.org/licenses/LICENSE-2.0 -->
-    <dependency>
-      <groupId>org.jboss.resteasy</groupId>
-      <artifactId>jaxrs-api</artifactId>
-      <version>${resteasy.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.resteasy</groupId>
-      <artifactId>resteasy-client</artifactId>
-      <version>${resteasy.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.resteasy</groupId>
-      <artifactId>resteasy-jaxrs</artifactId>
-      <version>${resteasy.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.resteasy</groupId>
-      <artifactId>resteasy-jackson2-provider</artifactId>
-      <version>${resteasy.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.resteasy</groupId>
-      <artifactId>resteasy-multipart-provider</artifactId>
-      <version>${resteasy.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.resteasy</groupId>
-      <artifactId>resteasy-guice</artifactId>
-      <version>${resteasy.version}</version>
-    </dependency>
+		<!-- Apache Commons IO, Apache license http://www.apache.org/licenses/LICENSE-2.0 -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
 
-    <!-- Google Guice, Apache license http://www.apache.org/licenses/LICENSE-2.0 -->
-    <dependency>
-      <groupId>com.google.inject</groupId>
-      <artifactId>guice</artifactId>
-      <version>4.0</version>
-    </dependency>
-    <dependency>
-    	<groupId>com.google.inject.extensions</groupId>
-    	<artifactId>guice-grapher</artifactId>
-    	<version>4.0</version>
-	</dependency>
-    
-    <!-- Java servlet api, CDDL + GPLv2 with classpath exception, https://glassfish.java.net/nonav/public/CDDL+GPL.html -->
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
-      <version>3.0.1</version>
-      <scope>provided</scope>
-    </dependency>
+		<!-- Resteasy exception chains, Apache license http://www.apache.org/licenses/LICENSE-2.0 -->
+		<dependency>
+			<groupId>uk.ac.cam.cl.dtg.web</groupId>
+			<artifactId>resteasy-exception-chains</artifactId>
+			<version>1.0.6-SNAPSHOT</version>
+		</dependency>
 
-    <!-- Junit testing framework, Eclipse Public License 1.0 http://junit.org/license.html -->
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
+		<!-- Resteasy framework, Apache license http://www.apache.org/licenses/LICENSE-2.0 -->
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>jaxrs-api</artifactId>
+			<version>${resteasy.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-client</artifactId>
+			<version>${resteasy.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-jaxrs</artifactId>
+			<version>${resteasy.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-jackson2-provider</artifactId>
+			<version>${resteasy.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-multipart-provider</artifactId>
+			<version>${resteasy.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-guice</artifactId>
+			<version>${resteasy.version}</version>
+		</dependency>
 
-    <!-- Google Guava,  Apache license http://www.apache.org/licenses/LICENSE-2.0 -->
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>18.0</version>
-    </dependency>
+		<!-- Google Guice, Apache license http://www.apache.org/licenses/LICENSE-2.0 -->
+		<dependency>
+			<groupId>com.google.inject</groupId>
+			<artifactId>guice</artifactId>
+			<version>4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.inject.extensions</groupId>
+			<artifactId>guice-grapher</artifactId>
+			<version>4.0</version>
+		</dependency>
 
-    <!-- Log4j, Apache license http://www.apache.org/licenses/LICENSE-2.0 -->
-    <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>${log4j.version}</version>
-      <scope>runtime</scope>
-    </dependency>
+		<!-- Java servlet api, CDDL + GPLv2 with classpath exception, https://glassfish.java.net/nonav/public/CDDL+GPL.html -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.0.1</version>
+			<scope>provided</scope>
+		</dependency>
 
-    <!-- Slf4j, MIT license http://www.slf4j.org/license.html -->
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>${slf4j.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-log4j12</artifactId>
-      <version>${slf4j.version}</version>
-      <scope>runtime</scope>
-    </dependency>
+		<!-- Junit testing framework, Eclipse Public License 1.0 http://junit.org/license.html -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
 
-    <!-- Resteasy Docker Bindings, Apache license http://www.apache.org/licenses/LICENSE-2.0 -->
-    <dependency>
-      <groupId>uk.ac.cam.cl.dtg.web</groupId>
-      <artifactId>resteasy-docker</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
-    </dependency>
+		<!-- Google Guava, Apache license http://www.apache.org/licenses/LICENSE-2.0 -->
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>18.0</version>
+		</dependency>
 
-    <!-- Resteasy CORS filter, Apache license http://www.apache.org/licenses/LICENSE-2.0 -->
-    <dependency>
-      <groupId>uk.ac.cam.cl.dtg.web</groupId>
-      <artifactId>resteasy-cors</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
-    </dependency>
-    
-    <!-- JGit, Eclipse Distribution License 1.0 http://www.eclipse.org/org/documents/edl-v10.php -->
-    <dependency>
-      <groupId>org.eclipse.jgit</groupId>
-      <artifactId>org.eclipse.jgit</artifactId>
-      <version>4.2.0.201601211800-r</version>
-    </dependency>
-    <dependency>
-      <groupId>org.eclipse.jgit</groupId>
-      <artifactId>org.eclipse.jgit.http.server</artifactId>
-      <version>4.2.0.201601211800-r</version>
-    </dependency>
+		<!-- Log4j, Apache license http://www.apache.org/licenses/LICENSE-2.0 -->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>${log4j.version}</version>
+			<scope>runtime</scope>
+		</dependency>
 
-    <!-- Swagger, Apache license http://www.apache.org/licenses/LICENSE-2.0 -->
-    <dependency>
-      <groupId>com.wordnik</groupId>
-      <artifactId>swagger-jaxrs_2.11</artifactId>
-      <version>1.3.12</version>
-      <exclusions>
-	<exclusion>
-    	  <artifactId>jsr311-api</artifactId>
-	  <groupId>javax.ws.rs</groupId>
-	</exclusion>
-      </exclusions>
-    </dependency>
-    
-  </dependencies>
+		<!-- Slf4j, MIT license http://www.slf4j.org/license.html -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>${slf4j.version}</version>
+			<scope>runtime</scope>
+		</dependency>
 
-  <build>
-    <plugins>
-      <plugin>
-	<groupId>org.apache.maven.plugins</groupId>
-	<artifactId>maven-dependency-plugin</artifactId>
-	<version>2.8</version>
-      </plugin>
+		<!-- Resteasy Docker Bindings, Apache license http://www.apache.org/licenses/LICENSE-2.0 -->
+		<dependency>
+			<groupId>uk.ac.cam.cl.dtg.web</groupId>
+			<artifactId>resteasy-docker</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
 
-      <plugin>
-	<groupId>org.apache.maven.plugins</groupId>
-	<artifactId>maven-compiler-plugin</artifactId>
-	<version>2.3.2</version>
-	<configuration>
-	  <source>1.8</source>
-	  <target>1.8</target>
-	</configuration>
-      </plugin>
-      <plugin>
-	<groupId>org.apache.maven.plugins</groupId>
-	<artifactId>maven-war-plugin</artifactId>
-	<version>2.4</version>
-      </plugin>
-    </plugins>
+		<!-- Resteasy CORS filter, Apache license http://www.apache.org/licenses/LICENSE-2.0 -->
+		<dependency>
+			<groupId>uk.ac.cam.cl.dtg.web</groupId>
+			<artifactId>resteasy-cors</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
 
-    <extensions>
-      <extension>
-	<groupId>org.apache.maven.wagon</groupId>
-	<artifactId>wagon-ssh</artifactId>
-	<version>2.6</version>
-      </extension>
-    </extensions>
-  </build>
+		<!-- JGit, Eclipse Distribution License 1.0 http://www.eclipse.org/org/documents/edl-v10.php -->
+		<dependency>
+			<groupId>org.eclipse.jgit</groupId>
+			<artifactId>org.eclipse.jgit</artifactId>
+			<version>4.2.0.201601211800-r</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jgit</groupId>
+			<artifactId>org.eclipse.jgit.http.server</artifactId>
+			<version>4.2.0.201601211800-r</version>
+		</dependency>
 
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-	<groupId>org.apache.james</groupId>
-	<artifactId>apache-mime4j</artifactId>
-	<version>0.6.1-iso8859encoding</version>
-      </dependency>
-      <dependency>
-	<groupId>commons-codec</groupId>
-	<artifactId>commons-codec</artifactId>
-	<version>1.5</version>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
+		<!-- Swagger, Apache license http://www.apache.org/licenses/LICENSE-2.0 -->
+		<dependency>
+			<groupId>com.wordnik</groupId>
+			<artifactId>swagger-jaxrs_2.11</artifactId>
+			<version>1.3.12</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>jsr311-api</artifactId>
+					<groupId>javax.ws.rs</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>2.8</version>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.4</version>
+			</plugin>
+		</plugins>
+
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-ssh</artifactId>
+				<version>2.6</version>
+			</extension>
+		</extensions>
+	</build>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.apache.james</groupId>
+				<artifactId>apache-mime4j</artifactId>
+				<version>0.6.1-iso8859encoding</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-codec</groupId>
+				<artifactId>commons-codec</artifactId>
+				<version>1.5</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 </project>
