--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
 	<artifactId>pottery-backend</artifactId>
 	<packaging>war</packaging>
 	<version>1.0.0-SNAPSHOT</version>
-	<name>programming-test</name>
+	<name>pottery-backend</name>
 
 	<properties>
 		<resteasy.version>3.0.8.Final</resteasy.version>
 		<log4j.version>1.2.17</log4j.version>
 		<slf4j.version>1.7.5</slf4j.version>
-    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<dependencies>
@@ -222,11 +222,14 @@
 					<properties>
 						<owner>Andrew Rice</owner>
 						<email>acr31@cam.ac.uk</email>
+						<project.description>Backend API for testing programming exercises</project.description>
+						<project.inceptionYear>2015</project.inceptionYear>
 					</properties>
 					<excludes>
-						<exclude>**/README</exclude>
-						<exclude>src/test/resources/**</exclude>
-						<exclude>src/main/resources/**</exclude>
+					        <exclude>docs/**</exclude>
+					        <exclude>src/main/webapp/jquery*</exclude>
+					        <exclude>LICENSE</exclude>
+					        <exclude>pom.xml</exclude>
 					</excludes>
 				</configuration>
 				<executions>
