bind licence check to the test phase - seems to be upsetting eclipse

--- a/pom.xml
+++ b/pom.xml
@@ -234,12 +234,13 @@
 				</configuration>
 				<executions>
 					<execution>
+						<phase>test</phase>
 						<goals>
 							<goal>check</goal>
 						</goals>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin> 
 		</plugins>
 
 		<extensions>
