--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
 		<dependency>
 			<groupId>uk.ac.cam.cl.dtg.web</groupId>
 			<artifactId>resteasy-exception-chains</artifactId>
-			<version>1.0.6-SNAPSHOT</version>
+			<version>1.0.6</version>
 		</dependency>
 
 		<!-- Resteasy framework, Apache license http://www.apache.org/licenses/LICENSE-2.0 -->
@@ -153,14 +153,14 @@
 		<dependency>
 			<groupId>uk.ac.cam.cl.dtg.web</groupId>
 			<artifactId>resteasy-docker</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>1.0.1</version>
 		</dependency>
 
 		<!-- Resteasy CORS filter, Apache license http://www.apache.org/licenses/LICENSE-2.0 -->
 		<dependency>
 			<groupId>uk.ac.cam.cl.dtg.web</groupId>
 			<artifactId>resteasy-cors</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>1.0.0</version>
 		</dependency>
 
 		<!-- JGit, Eclipse Distribution License 1.0 http://www.eclipse.org/org/documents/edl-v10.php -->
