--- a/pom.xml
+++ b/pom.xml
@@ -153,7 +153,7 @@
 		<dependency>
 			<groupId>uk.ac.cam.cl.dtg.web</groupId>
 			<artifactId>resteasy-docker</artifactId>
-			<version>1.0.4</version>
+			<version>1.0.5-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Resteasy CORS filter, Apache license http://www.apache.org/licenses/LICENSE-2.0 -->
@@ -230,6 +230,8 @@
 					        <exclude>src/main/webapp/jquery*</exclude>
 					        <exclude>LICENSE</exclude>
 					        <exclude>pom.xml</exclude>
+							<exclude>docker-api-osx.sh</exclude>
+							<exclude>docker-compose.yml</exclude>
 					</excludes>
 				</configuration>
 				<executions>
