--- a/pom.xml
+++ b/pom.xml
@@ -196,6 +196,13 @@
       <version>9.3.7.v20160115</version>
     </dependency>
 
+    <!-- HSQLDB, HSQLDB license http://hsqldb.org/web/hsqlLicense.html -->
+    <dependency>
+      <groupId>org.hsqldb</groupId>
+      <artifactId>hsqldb</artifactId>
+      <version>2.4.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
