--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <dependency>
       <groupId>uk.ac.cam.cl.dtg.teaching</groupId>
       <artifactId>pottery-container-interface</artifactId>
-      <version>1.0.2</version>
+      <version>1.0.3</version>
     </dependency>
 
 
@@ -218,6 +218,11 @@
       <version>0.35</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>com.google.auto.value</groupId>
+          <artifactId>auto-value</artifactId>
+          <version>1.1</version>
+      </dependency>
 
   </dependencies>
 
