added release information

--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>uk.ac.cam.cl.dtg.teaching</groupId>
   <artifactId>pottery-backend</artifactId>
@@ -15,7 +13,12 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
-  <dependencies>
+    <scm>
+      <developerConnection>scm:git:ssh://git@github.com/ucam-cl-dtg/pottery-container-interface.git</developerConnection>
+      <tag>HEAD</tag>
+    </scm>
+
+    <dependencies>
 
     <!-- Java Pojos for json interface with the code running in containers,
       Apache license -->
@@ -30,7 +33,7 @@
     <dependency>
       <groupId>uk.ac.cam.cl.dtg.teaching</groupId>
       <artifactId>pottery-backend-interface</artifactId>
-      <version>1.0.0</version>
+      <version>1.0.1</version>
     </dependency>
 
 
@@ -236,6 +239,12 @@
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.5.3</version>
+      </plugin>
+     
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.3.2</version>
         <configuration>
@@ -317,5 +326,18 @@
       </extension>
     </extensions>
   </build>
+
+  <distributionManagement>
+    <repository>
+      <id>dtg-code</id>
+      <name>RepositoryProxy</name>
+      <url>http://dtg-maven.cl.cam.ac.uk/content/repositories/releases</url>
+    </repository>
+    <snapshotRepository>
+      <id>dtg-code</id>
+      <name>RepositoryProxy</name>
+      <url>http://dtg-maven.cl.cam.ac.uk/content/repositories/snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
 
 </project>
