--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>uk.ac.cam.cl.dtg.teaching</groupId>
   <artifactId>pottery-backend</artifactId>
   <packaging>war</packaging>
-  <version>1.0.0</version>
+  <version>1.0.0-SNAPSHOT</version>
   <name>pottery-backend</name>
 
   <properties>
@@ -14,8 +14,8 @@
   </properties>
 
     <scm>
-      <developerConnection>scm:git:ssh://git@github.com/ucam-cl-dtg/pottery-container-interface.git</developerConnection>
-      <tag>pottery-backend-1.0.0</tag>
+      <developerConnection>scm:git:ssh://git@github.com/ucam-cl-dtg/pottery-backend.git</developerConnection>
+      <tag>HEAD</tag>
     </scm>
 
     <dependencies>
