--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>uk.ac.cam.cl.dtg.teaching</groupId>
   <artifactId>pottery-backend</artifactId>
   <packaging>war</packaging>
-  <version>1.0.3</version>
+  <version>1.0.4-SNAPSHOT</version>
   <name>pottery-backend</name>
 
   <properties>
@@ -15,7 +15,7 @@
 
     <scm>
       <developerConnection>scm:git:ssh://git@github.com/ucam-cl-dtg/pottery-backend.git</developerConnection>
-      <tag>pottery-backend-1.0.3</tag>
+      <tag>HEAD</tag>
     </scm>
 
     <dependencies>
