--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
     <dependency>
       <groupId>uk.ac.cam.cl.dtg.teaching</groupId>
       <artifactId>pottery-backend-interface</artifactId>
-      <version>1.0.3</version>
+      <version>1.0.4-SNAPSHOT</version>
     </dependency>
 
 
@@ -137,7 +137,7 @@
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>23.0</version>
+      <version>24.0-jre</version>
     </dependency>
 
     <!-- Log4j, Apache license http://www.apache.org/licenses/LICENSE-2.0 -->
@@ -218,14 +218,24 @@
     <dependency>
       <groupId>com.google.truth</groupId>
       <artifactId>truth</artifactId>
-      <version>0.35</version>
+      <version>0.39</version>
       <scope>test</scope>
     </dependency>
-      <dependency>
-          <groupId>com.google.auto.value</groupId>
-          <artifactId>auto-value</artifactId>
-          <version>1.1</version>
-      </dependency>
+
+    <!-- Google truth, Apache license http://www.apache.org/licenses/LICENSE-2.0 -->
+    <dependency>
+      <groupId>com.google.truth.extensions</groupId>
+      <artifactId>truth-java8-extension</artifactId>
+      <version>0.39</version>
+      <scope>test</scope>
+    </dependency>
+
+    <!-- Google AutoValue, Apache license http://www.apache.org/licenses/LICENSE-2.0 -->
+    <dependency>
+      <groupId>com.google.auto.value</groupId>
+      <artifactId>auto-value</artifactId>
+      <version>1.1</version>
+    </dependency>
 
   </dependencies>
 
