--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
     <dependency>
       <groupId>uk.ac.cam.cl.dtg.teaching</groupId>
       <artifactId>pottery-backend-interface</artifactId>
-      <version>1.0.4-SNAPSHOT</version>
+      <version>1.0.4</version>
     </dependency>
 
 
@@ -165,7 +165,7 @@
     <dependency>
       <groupId>uk.ac.cam.cl.dtg.web</groupId>
       <artifactId>resteasy-docker</artifactId>
-      <version>1.0.7-SNAPSHOT</version>
+      <version>1.0.7</version>
     </dependency>
 
     <!-- Resteasy CORS filter, Apache license http://www.apache.org/licenses/LICENSE-2.0 -->
