WIP: making multi-language changes

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -16,8 +16,16 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-log4j.rootLogger=INFO, stdout
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.Target=System.out
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+# Set root logger level to DEBUG.
+log4j.rootLogger=DEBUG, console, myFile
+
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.layout.ConversionPattern=[%d{ABSOLUTE} %-5p %c{1}]: %m%n
+
+# myFile writes to file
+log4j.appender.myFile=org.apache.log4j.RollingFileAppender
+log4j.appender.myFile.File=logs/tomcatlog4j.log
+log4j.appender.myFile.MaxFileSize=100KB
+log4j.appender.myFile.layout=org.apache.log4j.PatternLayout
+log4j.appender.myFile.layout.ConversionPattern=[%d{ABSOLUTE} %-5p %c{1}]: %m%n
