--- a/pom.xml
+++ b/pom.xml
@@ -156,7 +156,7 @@
     <dependency>
       <groupId>uk.ac.cam.cl.dtg.web</groupId>
       <artifactId>resteasy-docker</artifactId>
-      <version>1.0.8-SNAPSHOT</version>
+      <version>1.0.7</version>
     </dependency>
 
     <!-- Resteasy CORS filter, Apache license http://www.apache.org/licenses/LICENSE-2.0 -->
