--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <dependency>
       <groupId>uk.ac.cam.cl.dtg.teaching</groupId>
       <artifactId>pottery-backend-interface</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
+      <version>2.0.0</version>
     </dependency>
 
 
