--- a/pom.xml
+++ b/pom.xml
@@ -260,6 +260,38 @@
                 <version>2.4</version>
             </plugin>
             <plugin>
+                <groupId>com.mycila</groupId>
+                <artifactId>license-maven-plugin</artifactId>
+                <version>3.0</version>
+                <configuration>
+                    <header>com/mycila/maven/plugin/license/templates/AGPL-3.txt</header>
+                    <mapping>
+                        <java>SLASHSTAR_STYLE</java>
+                    </mapping>
+                    <properties>
+                        <owner>BlueOptima Limited, Andrew Rice</owner>
+                        <email>acr31@cam.ac.uk</email>
+                        <project.description>Backend API for testing programming exercises</project.description>
+                        <project.inceptionYear>2015-2018</project.inceptionYear>
+                    </properties>
+                    <excludes>
+                        <exclude>docs/**</exclude>
+                        <exclude>src/main/webapp/jquery*</exclude>
+                        <exclude>LICENSE</exclude>
+                        <exclude>pom.xml</exclude>
+                        <exclude>checkstyle.xml</exclude>
+                    </excludes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>2.17</version>
