--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>uk.ac.cam.cl.dtg.teaching</groupId>
             <artifactId>pottery-backend-interface</artifactId>
-            <version>2.0.3-SNAPSHOT</version>
+            <version>2.1.0</version>
         </dependency>
 
 
