--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>uk.ac.cam.cl.dtg.teaching</groupId>
     <artifactId>pottery-backend</artifactId>
     <packaging>war</packaging>
-    <version>2.1.1-SNAPSHOT</version>
+    <version>2.1.1</version>
     <name>pottery-backend</name>
 
     <properties>
@@ -15,7 +15,7 @@
 
     <scm>
         <developerConnection>scm:git:ssh://git@github.com/ucam-cl-dtg/pottery-backend.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>pottery-backend-2.1.1</tag>
     </scm>
 
     <dependencies>
