--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>uk.ac.cam.cl.dtg.teaching</groupId>
             <artifactId>pottery-backend-interface</artifactId>
-            <version>2.1.0</version>
+            <version>2.1.1-SNAPSHOT</version>
         </dependency>
 
 
@@ -61,7 +61,7 @@
         <dependency>
             <groupId>uk.ac.cam.cl.dtg.web</groupId>
             <artifactId>resteasy-exception-chains</artifactId>
-            <version>1.0.6</version>
+            <version>1.0.7-SNAPSHOT</version>
         </dependency>
 
         <!-- Resteasy framework, Apache license http://www.apache.org/licenses/LICENSE-2.0 -->
@@ -156,14 +156,14 @@
         <dependency>
             <groupId>uk.ac.cam.cl.dtg.web</groupId>
             <artifactId>resteasy-docker</artifactId>
-            <version>1.0.8</version>
+            <version>1.0.9-SNAPSHOT</version>
         </dependency>
 
         <!-- Resteasy CORS filter, Apache license http://www.apache.org/licenses/LICENSE-2.0 -->
         <dependency>
             <groupId>uk.ac.cam.cl.dtg.web</groupId>
             <artifactId>resteasy-cors</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.1-SNAPSHOT</version>
         </dependency>
 
         <!-- JGit, Eclipse Distribution License 1.0 http://www.eclipse.org/org/documents/edl-v10.php -->
@@ -226,6 +226,12 @@
             <groupId>com.google.auto.value</groupId>
             <artifactId>auto-value</artifactId>
             <version>1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.sshd</groupId>
+            <artifactId>sshd-core</artifactId>
+            <version>2.0.0</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
