--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
         <dependency>
             <groupId>com.mchange</groupId>
             <artifactId>c3p0</artifactId>
-            <version>0.9.5</version>
+            <version>[0.9.5.3,)</version>
         </dependency>
 
         <!-- Apache Commons IO, Apache license http://www.apache.org/licenses/LICENSE-2.0 -->
