run checkstyle on compilation

--- a/pom.xml
+++ b/pom.xml
@@ -317,7 +317,7 @@
                 <executions>
                     <execution>
                         <id>validate</id>
-                        <phase>validate</phase>
+                        <phase>compile</phase>
 			<configuration>
                             <configLocation>checkstyle.xml</configLocation>
                             <encoding>UTF-8</encoding>
